# NodeScope

./: .dockerignore  .env.example  .env.signet.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STATUS.md  README.en-US.md  README.md  README.pt-BR.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  ROADMAP.md  SECURITY.md  bitcoin.conf.example  bitcoin.signet.conf.example  docker-compose.observability.yml  docker-compose.yml  monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: alerts_service.py  app.py  charts_service.py  demo.py  demo_service.py  fee_service.py  history_service.py  metrics.py  network_guard.py  policy_service.py  rate_limiter.py  reorg_service.py  rpc.py  schemas.py  service.py  simulation_service.py  storage.py
docs/: README.md  api.md  architecture.md  bitcoin-core-setup.md  demo-checklist.md  demo-script.md  demo-transcript.md  demo.md  deploy-cloudflare-tunnel.md  deploy-vps.md  docker.md  final-delivery-checklist.md  implementation-plan-v1.2.md  judges-guide.md  live-validation.md  observability-grafana.md  presentation-checklist.md  presentation-script.md  project-status.md  roadmap.md  signet.md  smoke-tests.md  troubleshooting.md
engine/: __init__.py  analytics.py  classify.py  models.py  parser.py  reader.py  snapshot.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
scripts/: benchmark_nodescope.py  capture-dashboard-screenshots.py  check-public-clean.sh  demo_regtest.sh  load_smoke.py  quickstart.sh  replay_monitor_log.py  (+2 more)
(+78 files in other folders)
